<resources>
    <string name="app_name">Unit Converter App</string>
    <string name="label_unit_category">Unit Category:</string>
    <string name="label_convert_from">Convert FROM</string>
    <string name="label_convert_to">Convert TO</string>
    <string name="hint_enter_unit_value">enter unit value</string>
    <string name="button_convert">Convert Unit</string>
    <string name="text_result">Conversion Result:</string>
    <string name="text_select_category">Select a unit category</string>

    <!--Unit Categories-->
    <string name="category_length_distance">Length/Distance</string>
    <string name="category_area">Area</string>
    <string name="category_volume">Volume</string>
    <string name="category_mass_weight">Mass/Weight</string>
    <string name="category_temperature">Temperature</string>
    <string name="category_pressure">Pressure</string>
    <string name="category_energy">Energy</string>
    <string name="category_power">Power</string>
    <string name="category_angles">Angles</string>
    <string name="category_force">Force</string>

    <!--Sub-Categories of Length/Distance-->
    <string name="subcategory_meter">Meter (m)</string>
    <string name="subcategory_kilometer">Kilometer (km)</string>
    <string name="subcategory_mile">Mile (mi)</string>
    <string name="subcategory_yard">Yard (yd)</string>
    <string name="subcategory_foot">Foot (ft)</string>
    <string name="subcategory_inch">Inch (in)</string>

    <!--Sub-Categories of Area-->
    <string name="subcategory_square_meter">Square Meter (m²)</string>
    <string name="subcategory_square_kilometer">Square Kilometer (km²)</string>
    <string name="subcategory_square_mile">Square Mile (mi²)</string>
    <string name="subcategory_hectare">Hectare (ha)</string>
    <string name="subcategory_acre">Acre (ac)</string>

    <!--Sub-Categories of Volume-->
    <string name="subcategory_cubic_meter">Cubic Meter (m³)</string>
    <string name="subcategory_liter">Liter (L)</string>
    <string name="subcategory_milliliter">Milliliter (mL)</string>
    <string name="subcategory_gallon_us">US Gallon (gal)</string>
    <string name="subcategory_gallon_imperial">Imperial Gallon (gal)</string>
    <string name="subcategory_quart_us">US Quart (qt)</string>
    <string name="subcategory_quart_imperial">Imperial Quart (qt)</string>
    <string name="subcategory_pint_us">US Pint (pt)</string>
    <string name="subcategory_pint_imperial">Imperial Pint (pt)</string>
    <string name="subcategory_fluid_ounce_us">US Fluid Ounce (fl oz)</string>
    <string name="subcategory_fluid_ounce_imperial">Imperial Fluid Ounce (fl oz)</string>

    <!--Sub-Categories of Mass/Weight-->
    <string name="subcategory_kilogram">Kilogram (kg)</string>
    <string name="subcategory_gram">Gram (g)</string>
    <string name="subcategory_milligram">Milligram (mg)</string>
    <string name="subcategory_metric_ton">Metric Ton (t)</string>
    <string name="subcategory_ton_us">US (Long) Ton (t)</string>
    <string name="subcategory_ton_imperial">Imperial Ton (t)</string>
    <string name="subcategory_pound">Pound (lb)</string>
    <string name="subcategory_ounce_us">US Ounce (oz)</string>
    <string name="subcategory_ounce_imperial">Imperial Ounce (oz)</string>
    <string name="subcategory_stone">Stone (st)</string>
    <string name="subcategory_carat">Carat (ct)</string>

    <!--Sub-Categories of Temperature-->
    <string name="subcategory_celsius">Celsius (°C)</string>
    <string name="subcategory_fahrenheit">Fahrenheit (°F)</string>
    <string name="subcategory_kelvin">Kelvin (K)</string>
    <string name="subcategory_rankine">Rankine (°R)</string>

    <!--Sub-Categories of Pressure-->
    <string name="subcategory_pascal">Pascal (Pa)</string>
    <string name="subcategory_bar">Bar (bar)</string>
    <string name="subcategory_atmosphere">Atmosphere (atm)</string>
    <string name="subcategory_torr">Torr (Torr)</string>
    <string name="subcategory_pound_per_square_inch">Pound per Square Inch (psi)</string>
    <string name="subcategory_kilopascal">Kilopascal (kPa)</string>
    <string name="subcategory_millimeter_of_mercury">Millimeter of Mercury (mmHg)</string>

    <!--Sub-Categories of Energy-->
    <string name="subcategory_joule">Joule (J)</string>
    <string name="subcategory_calorie">Calorie (cal)</string>
    <string name="subcategory_kilocalorie">Kilocalorie (kcal)</string>
    <string name="subcategory_electronvolt">Electronvolt (eV)</string>
    <string name="subcategory_watt_hour">Watt-hour (Wh)</string>
    <string name="subcategory_british_thermal_unit">British Thermal Unit (BTU)</string>
    <string name="subcategory_kilowatt_hour">Kilowatt-hour (kWh)</string>

    <!--Sub-Categories of Power-->
    <string name="subcategory_watt">Watt (W)</string>
    <string name="subcategory_kilowatt">Kilowatt (kW)</string>
    <string name="subcategory_megawatt">Megawatt (MW)</string>
    <string name="subcategory_horsepower_metric">Metric Horsepower (hp)</string>
    <string name="subcategory_horsepower_imperial">Imperial Horsepower (hp)</string>
    <string name="subcategory_volt_ampere">Volt-ampere (VA)</string>
    <string name="subcategory_kilovolt_ampere">Kilovolt-ampere (kVA)</string>

    <!--Sub-Categories of Angles-->
    <string name="subcategory_degree">Degree (°)</string>
    <string name="subcategory_radian">Radian (rad)</string>
    <string name="subcategory_gradian">Gradian (gon)</string>

    <!--Sub-Categories of Force-->
    <string name="subcategory_newton">Newton (N)</string>
    <string name="subcategory_pound_force">Pound-force (lbf)</string>
    <string name="subcategory_kilogram_force">Kilogram-force (kgf)</string>
    <string name="subcategory_dyne">Dyne (dyn)</string>
    <string name="subcategory_ton_force_metric">Metric Ton-force (tf)</string>
    <string name="subcategory_ton_force_us">US (Short) Ton-force (tf)</string>

    <!--Spinners items (default)-->
    <array name="spinner_items_empty">
        <item>@string/text_select_category</item>
    </array>

    <!--Spinners items for Length/Distance units-->
    <array name="spinner_items_length_distance">
        <item>@string/subcategory_meter</item>
        <item>@string/subcategory_kilometer</item>
        <item>@string/subcategory_mile</item>
        <item>@string/subcategory_yard</item>
        <item>@string/subcategory_foot</item>
        <item>@string/subcategory_inch</item>
    </array>

    <!--Spinners items for Area units-->
    <array name="spinner_items_area">
        <item>@string/subcategory_square_meter</item>
        <item>@string/subcategory_square_kilometer</item>
        <item>@string/subcategory_square_mile</item>
        <item>@string/subcategory_hectare</item>
        <item>@string/subcategory_acre</item>
    </array>

    <!--Spinners items for Volume units-->
    <array name="spinner_items_volume">
        <item>@string/subcategory_cubic_meter</item>
        <item>@string/subcategory_liter</item>
        <item>@string/subcategory_milliliter</item>
        <item>@string/subcategory_gallon_us</item>
        <item>@string/subcategory_gallon_imperial</item>
        <item>@string/subcategory_quart_us</item>
        <item>@string/subcategory_quart_imperial</item>
        <item>@string/subcategory_pint_us</item>
        <item>@string/subcategory_pint_imperial</item>
        <item>@string/subcategory_fluid_ounce_us</item>
        <item>@string/subcategory_fluid_ounce_imperial</item>
    </array>

    <!--Spinners items for Mass/Weight units-->
    <array name="spinner_items_mass_weight">
        <item>@string/subcategory_kilogram</item>
        <item>@string/subcategory_gram</item>
        <item>@string/subcategory_milligram</item>
        <item>@string/subcategory_metric_ton</item>
        <item>@string/subcategory_ton_us</item>
        <item>@string/subcategory_ton_imperial</item>
        <item>@string/subcategory_pound</item>
        <item>@string/subcategory_ounce_us</item>
        <item>@string/subcategory_ounce_imperial</item>
        <item>@string/subcategory_stone</item>
        <item>@string/subcategory_carat</item>
    </array>

    <!--Spinners items for Temperature units-->
    <array name="spinner_items_temperature">
        <item>@string/subcategory_celsius</item>
        <item>@string/subcategory_fahrenheit</item>
        <item>@string/subcategory_kelvin</item>
        <item>@string/subcategory_rankine</item>
    </array>

    <!--Spinners items for Pressure units-->
    <array name="spinner_items_pressure">
        <item>@string/subcategory_pascal</item>
        <item>@string/subcategory_bar</item>
        <item>@string/subcategory_atmosphere</item>
        <item>@string/subcategory_torr</item>
        <item>@string/subcategory_pound_per_square_inch</item>
        <item>@string/subcategory_kilopascal</item>
        <item>@string/subcategory_millimeter_of_mercury</item>
    </array>

    <!--Spinners items for Energy units-->
    <array name="spinner_items_energy">
        <item>@string/subcategory_joule</item>
        <item>@string/subcategory_calorie</item>
        <item>@string/subcategory_kilocalorie</item>
        <item>@string/subcategory_electronvolt</item>
        <item>@string/subcategory_watt_hour</item>
        <item>@string/subcategory_british_thermal_unit</item>
        <item>@string/subcategory_kilowatt_hour</item>
    </array>

    <!--Spinners items for Power units-->
    <array name="spinner_items_power">
        <item>@string/subcategory_watt</item>
        <item>@string/subcategory_kilowatt</item>
        <item>@string/subcategory_megawatt</item>
        <item>@string/subcategory_horsepower_metric</item>
        <item>@string/subcategory_horsepower_imperial</item>
        <item>@string/subcategory_volt_ampere</item>
        <item>@string/subcategory_kilovolt_ampere</item>
    </array>

    <!--Spinners items for Angle units-->
    <array name="spinner_items_angle">
        <item>@string/subcategory_degree</item>
        <item>@string/subcategory_radian</item>
        <item>@string/subcategory_gradian</item>
    </array>

    <!--Spinners items for Force units-->
    <array name="spinner_items_force">
        <item>@string/subcategory_newton</item>
        <item>@string/subcategory_pound_force</item>
        <item>@string/subcategory_kilogram_force</item>
        <item>@string/subcategory_dyne</item>
        <item>@string/subcategory_ton_force_metric</item>
        <item>@string/subcategory_ton_force_us</item>
    </array>
</resources>